2005-04-16  Michael Natterer  <mitch@gimp.org>

	* plug-ins/helpbrowser/dialog.c: removed the "Close" button and
	added a "Wilber" button instead which opens the online docs in the
	web browser. Added accelerators ctrl+w and ctrl+q which close the
	help browser.

	* plug-ins/helpbrowser/queue.[ch]: updated my email address.

2005-04-16  Sven Neumann  <sven@gimp.org>

	* app/dialogs/desaturate-dialog.c: added an icon to the action
	button.

	* app/vectors/gimpvectors-import.c: reduce the number of string
	comparisons by using switches on the first character.

2005-04-16  Sven Neumann  <sven@gimp.org>

	Applied a patch (with minor modifications) from Karine Delvare
	that makes it possible to choose between various ways to remove
	color from a drawable (bug #155507):

	* libgimpbase/gimpbaseenums.h: added new enum GimpDesaturateMode.

	* libgimpbase/gimpbaseenums.c
	* libgimp/gimpenums.c.tail
	* plug-ins/pygimp/gimpenums.py
	* tools/pdbgen/enums.pl: regenerated.

	* app/core/gimpdrawable-desaturate.[ch]: implement other formulas
	to remove colors from a drawable.

	* tools/pdbgen/pdb/color.pdb: let gimp_desaturate() call
	gimp_drawable_desaturate() with GIMP_DESATURATE_LIGHTNESS so that
	it behaves like it always did.

	* app/pdb/color_cmds.c: regenerated.

	* app/dialogs/Makefile.am
	* app/dialogs/desaturate-dialog.[ch]: new files that define a simple
	dialog to choose a mode for desaturation.

	* app/actions/drawable-actions.[ch]: use the new dialog.

2005-04-16  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/vectors.pdb: let pdbgen create the code to
	initialize the variables.

	* app/pdb/vectors_cmds.c: regenerated.

2005-04-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c
	* plug-ins/helpbrowser/queue.[ch]: finished menu implementation.

2005-04-15  Manish Singh  <yosh@gimp.org>

	* plug-ins/helpbrowser/queue.c: call has_next/prev functions with
	arguments.

2005-04-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c